--- a/style.css
+++ b/style.css
@@ -1,12 +1,19 @@
 .bib {
-width: 10px;
-height: auto;
+width: auto;
+height: 44px;
 }
 
 h1 { font-size: 18px;
 }
 
+
   /* styling for horisontal navigation */
+
+.topnav {
+width: auto;
+height: 150px;
+     
+}  
 
 .topnav ul {
 list-style-type: none;
@@ -31,15 +38,25 @@ font-size: 18px;
 
 .topnav li a:hover {
     color: #79ba00;
+
 }
 
- /* styling for vertikal navigation */
+
+ /* styling for vertikal navigation 
+#forside {
+    display: flex;
+    justify-content:left;
+}
+
+
+ /* styling for vertikal navigation 
 
 .sidenav{
     display: block;
 }
 
-.sidenavoverskrift { font-family: Arial, Helvetica, sans-serif;
+.sidenavoverskrift { 
+    font-family: Arial, Helvetica, sans-serif;
     font-size: 35px;
     color:#79ba00;
     text-align: left;
@@ -75,17 +92,97 @@ font-size: 18px;
 .sidenav li a:hover {
     color: #79ba00;
 }
+*/
+
+/* Styling inspireret af https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_vertical_tabs 20.02.22 starter her */
+
+* {box-sizing: border-box}
+body {font-family: Arial, Helvetica, sans-serif;}
+
+p {text-align: left;} 
+
+/* Style the tab */
+.tab {
+  float: left;
+  padding-top: 10px;
+  width: 20%;
+  height: 300px;
+}
+
+/* Style the buttons inside the tab */
+.tab button {
+  display: block;
+  background-color: inherit;
+  color: black;
+  padding: 22px 16px;
+  width: 100%;
+  border: none;
+  outline: none;
+  text-align: left;
+  cursor: pointer;
+  transition: 0.3s;
+  font-size: 17px;
+}
+
+/* Change buttons text color on hover */
+.tab button:hover {
+    color: #79ba00;
+  
+}
+
+/* Create an active/current "tab button" class */
+.tab button.active {
+  background-color: #ccc;
+}
+
+/* Style the tab content */
+.tabcontent {
+  float: left;
+  padding: 0px 12px;
+  padding-top: 10px;
+  margin-bottom: 15px;
+  width: 80%;
+  border-left: none;
+  height: 800px;
+  text-align: center;
+}
+/* Styling inspireret af https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_vertical_tabs 20.02.22 slut */
+
+
+.fag-button{
+    border: none;
+    color: white;
+    padding: 16px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    background-color: white; 
+    color: black; 
+    border: 2px solid #79ba00;
+}
+
+.fag-button:hover {
+    background-color: #4CAF50;
+    color: white;
+}
+
 
 .footer {
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    background-color: #262626;
-    color: #fff;
-    position: fixed;
-    left: 0;
-    bottom: 0;
-    width: 100%;
+padding: 25px;
+display: flex;
+justify-content: center;
+background-color: #262626;
+color: #fff;
+position: relative;
+left: 0;
+bottom: 0;
+width: 100%;
+height: 250px;
+position: fixed;
     
 }
 
@@ -118,7 +215,7 @@ font-size: 18px;
 }
   
 .fa:hover {
-      opacity: 0.7;
+    opacity: 0.7;
 }
 .fa-facebook {
     background: #79ba00;
