--- a/style.css
+++ b/style.css
@@ -1,39 +1,43 @@
 .bib {
-width: auto;
-height: 44px;
+    width: auto;
+    height: 40px;
+    margin-left: 30px;
 }
 
-h1 { font-size: 18px;
+h1 { 
+    font-size: 18px;
 }
 
+h4{
+    text-align: left;
+}
 
   /* styling for horisontal navigation */
 
 .topnav {
-width: auto;
-height: 150px;
-     
+    width: auto;
+    height: 150px;     
 }  
 
 .topnav ul {
-list-style-type: none;
-margin: 0;
-padding: 0;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
 }
   
 .topnav li {
-display: inline;
-float: left;
+    display: inline;
+    float: left;
 }
 
 .topnav a {
-display: block;
-padding: 30px;
-background-color: #fff;
-font-family: sans-serif;
-color: #262626;
-text-decoration: none;
-font-size: 18px;
+    display: block;
+    padding: 30px;
+    background-color: #fff;
+    font-family: sans-serif;
+    color: #262626;
+    text-decoration: none;
+    font-size: 18px;
 }
 
 .topnav li a:hover {
@@ -41,65 +45,20 @@ font-size: 18px;
 
 }
 
+.topnav .search-container {
+    float: right;
+  }
 
- /* styling for vertikal navigation 
-#forside {
-    display: flex;
-    justify-content:left;
-}
-
-
- /* styling for vertikal navigation 
-
-.sidenav{
-    display: block;
-}
-
-.sidenavoverskrift { 
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 35px;
-    color:#79ba00;
-    text-align: left;
-    padding-top: 50px;
-    border: 30px;
-    margin-top: 100px;
-    padding-left: 20px;
-}
-
-
-.sidenav ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    width: 60px;
-} 
-  
-.sidenav  li {
-    background-color: #ffff;
-    margin-left: 20px;
-}
-
-.sidenav a {
-    text-decoration: none;
-    width: 40px;
-    color: #262626;
-    padding: 10px;
-    border: 5px;
-    display: block;
-    
-}
-
-.sidenav li a:hover {
-    color: #79ba00;
-}
-*/
 
 /* Styling inspireret af https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_vertical_tabs 20.02.22 starter her */
 
 * {box-sizing: border-box}
 body {font-family: Arial, Helvetica, sans-serif;}
 
-p {text-align: left;} 
+p {
+  text-align: left;
+  padding: 1px;
+} 
 
 /* Style the tab */
 .tab {
@@ -114,14 +73,14 @@ p {text-align: left;}
   display: block;
   background-color: inherit;
   color: black;
-  padding: 22px 16px;
+  padding: 10px 6px;
   width: 100%;
   border: none;
   outline: none;
   text-align: left;
   cursor: pointer;
   transition: 0.3s;
-  font-size: 17px;
+  font-size: 16px;
 }
 
 /* Change buttons text color on hover */
@@ -138,16 +97,58 @@ p {text-align: left;}
 /* Style the tab content */
 .tabcontent {
   float: left;
-  padding: 0px 12px;
   padding-top: 10px;
-  margin-bottom: 15px;
+  padding-right: 50px;
+  padding-left: 50px;
+  margin-bottom: 265px;
   width: 80%;
   border-left: none;
-  height: 800px;
+  height: auto;
   text-align: center;
+}
+
+.text-box {
+    border-radius: 1.px;
+    border-color: black;
+    border-style: solid;
+    padding: 5px;
+    padding: 15px;
+    color: black;
+    text-align: left;
+    height: 350px;
+    width: 250px;
+
 }
 /* Styling inspireret af https://www.w3schools.com/howto/tryit.asp?filename=tryhow_js_vertical_tabs 20.02.22 slut */
 
+
+
+.biologitabcontent {
+    display: table;
+    float: left;
+    padding-top: 10px;
+    padding-right: 50px;
+    padding-left: 50px;
+    width: 80%;
+    border-left: none;
+    height: auto;
+    text-align: left;
+    margin-bottom: 265px;
+}
+
+.biologibilleder {
+    width: 40%;
+    margin-top: 8px;
+    vertical-align: middle;
+}
+
+.column {
+    float: left;
+    width: 50%;
+    padding: 30px;
+    height: 400px;
+  }
+  
 
 .fag-button{
     border: none;
@@ -157,7 +158,8 @@ p {text-align: left;}
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 30px 15px;
+    width: 170px;
     transition-duration: 0.4s;
     cursor: pointer;
     background-color: white; 
@@ -166,23 +168,24 @@ p {text-align: left;}
 }
 
 .fag-button:hover {
-    background-color: #4CAF50;
+    background-color: #79ba00;
     color: white;
 }
 
 
+
 .footer {
-padding: 25px;
-display: flex;
-justify-content: center;
-background-color: #262626;
-color: #fff;
-position: relative;
-left: 0;
-bottom: 0;
-width: 100%;
-height: 250px;
-position: fixed;
+    padding: 25px;
+    display: flex;
+    justify-content: center;
+    background-color: #262626;
+    color: #fff;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 250px;
+    font-size: 15px;
+    position: fixed;
     
 }
 
